structure changes made and over

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="container">
         <div class="options">
             <div class="color">
-                <button><input type="color" ></button>
+                <p>Color</p><input type="color">
             </div>
             <div class="buttons">
-                <button>Color Mode</button>
+                <button class="active">Color Mode</button>
                 <button>Rainbow Mode</button>
                 <button>Eraser</button>
                 <button>Clear</button>
             </div>
             <div class="frame">
-                <p id="rangeNumber">4x4</p>
+                <p class="rangeNumber">4x4</p>
                 <input type="range">
             </div>
         </div>
