last changes made

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="frame">
                 <p class="rangeNumber">4x4</p>
-                <input type="range">
+                <input class="rangeEntry" type="range">
             </div>
         </div>
         <div class="square"></div>
