--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <button>Clear</button>
             </div>
             <div class="frame">
-                <p class="rangeNumber">4x4</p>
-                <input class="rangeEntry" type="range">
+                <p class="rangeNumber"></p>
+                <input class="range" type="range" min="2" max="210" step="2">
             </div>
         </div>
         <div class="square"></div>
