--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="frame">
                 <p class="rangeNumber"></p>
-                <input class="range" type="range" min="2" max="210" step="2">
+                <input class="range" type="range" min="1" max="500">
             </div>
         </div>
         <div class="square"></div>
